<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:hint="@string/fragment_add_post_id">

        <EditText
            android:id="@+id/post_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="123456789"
            android:fontFamily="@font/courier_prime_regular"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/fragment_add_user_id">

        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="123456789"
            android:fontFamily="@font/courier_prime_regular"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/title">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_prime_regular"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:hint="@string/fragment_add_body">

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/courier_prime_regular"
            android:maxLines="3"
            tools:ignore="Autofill,LabelFor,TextFields" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/post_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/courier_prime_regular"
        android:padding="10dp"
        android:text="@string/fragment_add_post"
        android:textSize="18sp" />

</LinearLayout>